--- a/recovery/init.rc
+++ b/recovery/init.rc
@@ -35,16 +35,15 @@ on fs
     mkdir /dev/usb-ffs 0770 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    write /sys/class/android_usb/android0/f_ffs/aliases adb
 
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor 2A47
+    write /sys/class/android_usb/android0/idVendor 18D1
     write /sys/class/android_usb/android0/idProduct D001
-    write /sys/class/android_usb/android0/f_ffs/aliases adb
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
-
 
 on boot
     ifup lo
@@ -59,8 +58,9 @@ service vm_bms /sbin/vm_bms
     disabled
 
 service rmt_storage /sbin/rmt_storage
-    user root
-    disabled
+    oneshot
+
+service rmt_oeminfo /sbin/rmt_oeminfo
     oneshot
 
 # Load properties from /system/ + /factory after fs mount.
